// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBar renders correctly 1`] = `
<div>
  <nav
    className="navbar navbar-toggleable-md mb-3"
  >
    <h1
      className="navbar-brand mb-0"
    >
      CJ Workbench
    </h1>
  </nav>
  <nav
    className="navbar fixed-top navbar-toggleable-md navbar-light bg-faded border-bottom-1"
  >
    <h1
      className="navbar-brand mb-0 mr-auto"
    >
      CJ Workbench
    </h1>
    <div
      className="dropdown"
    >
      <button
        aria-expanded={false}
        aria-haspopup="true"
        className="btn btn-secondary"
        data-toggle="dropdown"
        onClick={[Function]}
        type="button"
      >
        ☰
      </button>
      <div
        aria-hidden={true}
        className="dropdown-menu dropdown-menu-right"
        role="menu"
        tabIndex="-1"
      >
        <a
          className="dropdown-item"
          href="http://blog.cjworkbench.org"
          onClick={[Function]}
          tabIndex="0"
          type={undefined}
        >
           Help 
        </a>
        <a
          className="dropdown-item"
          href="/logout"
          onClick={[Function]}
          tabIndex="0"
          type={undefined}
        >
           Logout 
        </a>
      </div>
    </div>
  </nav>
</div>
`;

exports[`WorkflowNavBar renders correctly 1`] = `
<div>
  <nav
    className="navbar navbar-toggleable-md mb-3"
  >
    <h3>
      spacing text
    </h3>
  </nav>
  <nav
    className="navbar fixed-top navbar-toggleable-md navbar-light bg-faded border-bottom-1"
  >
    <div />
    <form
      onSubmit={[Function]}
    >
      <label>
          Import module from GitHub:  
        <input
          onChange={[Function]}
          type="text"
          value={undefined}
        />
      </label>
      <input
        type="submit"
        value="Import"
      />
    </form>
    <h3
      className="mx-auto"
    >
      Workflow Title
    </h3>
    <div
      className="dropdown"
    >
      <button
        aria-expanded={false}
        aria-haspopup="true"
        className="btn btn-secondary"
        data-toggle="dropdown"
        onClick={[Function]}
        type="button"
      >
        ☰
      </button>
      <div
        aria-hidden={true}
        className="dropdown-menu dropdown-menu-right"
        role="menu"
        tabIndex="-1"
      >
        <a
          className="dropdown-item"
          href="/workflows"
          onClick={[Function]}
          tabIndex="0"
          type={undefined}
        >
           Your Workflows 
        </a>
        <a
          className="dropdown-item"
          href="http://blog.cjworkbench.org"
          onClick={[Function]}
          tabIndex="0"
          type={undefined}
        >
           Help 
        </a>
        <a
          className="dropdown-item"
          href="/logout"
          onClick={[Function]}
          tabIndex="0"
          type={undefined}
        >
           Logout 
        </a>
      </div>
    </div>
  </nav>
</div>
`;
